--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 variables:
     TUTOR_PLUGIN: minio-azure
     TUTOR_IMAGES: minio
-    TUTOR_PYPI_PACKAGE: tutor-minio
+    TUTOR_PYPI_PACKAGE: tutor-minio-azure
     OPENEDX_RELEASE: juniper
 
 include:
